--- a/static/index.html
+++ b/static/index.html
@@ -114,11 +114,11 @@
 
   <script>
     const CONFIG = {
-      API_URL: 'http://127.0.0.1:5001/api/stocks',
-      API_STATUS_URL: 'http://127.0.0.1:5001/api/status',
-      REFRESH_INTERVAL: 10000,
-      MODE: 'test'
-    };
+    API_URL: window.location.origin + '/api/stocks',
+    API_STATUS_URL: window.location.origin + '/api/status',
+    REFRESH_INTERVAL: 10000,
+    MODE: 'test'
+};
 
     let isLoading=false, autoRefreshInterval=null, connectionCheckInterval=null;
 
