--- a/static/index.html
+++ b/static/index.html
@@ -116,8 +116,8 @@
     const CONFIG = {
     API_URL: window.location.origin + '/api/stocks',
     API_STATUS_URL: window.location.origin + '/api/status',
-    REFRESH_INTERVAL: 15000,
-    MODE: 'test'
+    REFRESH_INTERVAL: 15000,  // 10000 → 15000 (15초)
+    MODE: 'live'  // 기본값을 live로
 };
 
     let isLoading=false, autoRefreshInterval=null, connectionCheckInterval=null;
